--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,11 @@ body {
   margin: 20px 0;
 }
 
+.jumbotron {
+  background-color: #333; 
+  color: #fff;
+}
+
 .main-footer {
   background-color: #333; 
   color: #fff;
